logs/pcommerce.email.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/AttachmentTypes'...
Listing './lib/python3.5/site-packages/Products/AttachmentTypes/content'...
Listing './lib/python3.5/site-packages/Products/AttachmentTypes/i18n'...
Listing './lib/python3.5/site-packages/Products/AttachmentTypes/kss'...
Listing './lib/python3.5/site-packages/Products/AttachmentTypes/profiles'...
Listing './lib/python3.5/site-packages/Products/AttachmentTypes/profiles/default'...
Listing './lib/python3.5/site-packages/Products/AttachmentTypes/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products/AttachmentTypes/skins'...
Listing './lib/python3.5/site-packages/Products/AttachmentTypes/skins/attachment_widget'...
Compiling './lib/python3.5/site-packages/Products/AttachmentTypes/skins/attachment_widget/doAddAttachments.py'...
***   File "./lib/python3.5/site-packages/Products/AttachmentTypes/skins/attachment_widget/doAddAttachments.py", line 78
    return status, message, new_context
                                      ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/AttachmentTypes/skins/attachment_widget/doAddImages.py'...
***   File "./lib/python3.5/site-packages/Products/AttachmentTypes/skins/attachment_widget/doAddImages.py", line 76
    return status, message, new_context
                                      ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/AttachmentTypes/skins/attachment_widget/doAddLinks.py'...
***   File "./lib/python3.5/site-packages/Products/AttachmentTypes/skins/attachment_widget/doAddLinks.py", line 65
    return status, message, new_context
                                      ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/AttachmentTypes/skins/attachment_widget/doDeleteAttachments.py'...
***   File "./lib/python3.5/site-packages/Products/AttachmentTypes/skins/attachment_widget/doDeleteAttachments.py", line 31
    return status, message
                         ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/AttachmentTypes/skins/attachment_widget/doEditLinks.py'...
***   File "./lib/python3.5/site-packages/Products/AttachmentTypes/skins/attachment_widget/doEditLinks.py", line 24
    return message
                 ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/AttachmentTypes/skins/attachment_widget/doMoveDownAttachments.py'...
***   File "./lib/python3.5/site-packages/Products/AttachmentTypes/skins/attachment_widget/doMoveDownAttachments.py", line 30
    return message
                 ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/AttachmentTypes/skins/attachment_widget/doMoveUpAttachments.py'...
***   File "./lib/python3.5/site-packages/Products/AttachmentTypes/skins/attachment_widget/doMoveUpAttachments.py", line 31
    return message
                 ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/AttachmentTypes/skins/attachment_widget/doRenameAttachments.py'...
***   File "./lib/python3.5/site-packages/Products/AttachmentTypes/skins/attachment_widget/doRenameAttachments.py", line 21
    return message
                 ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/AttachmentTypes/widget'...
Listing './lib/python3.5/site-packages/Products/SingleKeywordWidget'...
Listing './lib/python3.5/site-packages/Products/SingleKeywordWidget/profiles'...
Listing './lib/python3.5/site-packages/Products/SingleKeywordWidget/profiles/default'...
Listing './lib/python3.5/site-packages/Products/SingleKeywordWidget/skins'...
Listing './lib/python3.5/site-packages/Products/SingleKeywordWidget/skins/singlekeywordwidget'...
Listing './lib/python3.5/site-packages/Products.AttachmentTypes-1.6.egg-info'...
Listing './lib/python3.5/site-packages/Products.SingleKeywordWidget-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pcommerce'...
Listing './lib/python3.5/site-packages/pcommerce/core'...
Compiling './lib/python3.5/site-packages/pcommerce/core/adapters.py'...
***   File "./lib/python3.5/site-packages/pcommerce/core/adapters.py", line 486
    raise AttributeError, 'value has to be a float got %s' % type(value)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pcommerce/core/browser'...
Listing './lib/python3.5/site-packages/pcommerce/core/browser/images'...
Listing './lib/python3.5/site-packages/pcommerce/core/browser/portlets'...
Listing './lib/python3.5/site-packages/pcommerce/core/browser/portlets/templates'...
Listing './lib/python3.5/site-packages/pcommerce/core/browser/templates'...
Listing './lib/python3.5/site-packages/pcommerce/core/browser/viewlets'...
Listing './lib/python3.5/site-packages/pcommerce/core/browser/viewlets/templates'...
Listing './lib/python3.5/site-packages/pcommerce/core/content'...
Listing './lib/python3.5/site-packages/pcommerce/core/i18n'...
Listing './lib/python3.5/site-packages/pcommerce/core/profiles'...
Listing './lib/python3.5/site-packages/pcommerce/core/profiles/default'...
Listing './lib/python3.5/site-packages/pcommerce/core/profiles/default/types'...
Listing './lib/python3.5/site-packages/pcommerce/core/skins'...
Listing './lib/python3.5/site-packages/pcommerce/core/skins/pcommerce'...
Listing './lib/python3.5/site-packages/pcommerce/email'...
Listing './lib/python3.5/site-packages/pcommerce/email/browser'...
Listing './lib/python3.5/site-packages/pcommerce/email/browser/images'...
Listing './lib/python3.5/site-packages/pcommerce/email/browser/javascripts'...
Listing './lib/python3.5/site-packages/pcommerce/email/browser/stylesheets'...
Listing './lib/python3.5/site-packages/pcommerce/email/browser/templates'...
Listing './lib/python3.5/site-packages/pcommerce/email/i18n'...
Listing './lib/python3.5/site-packages/pcommerce/email/profiles'...
Listing './lib/python3.5/site-packages/pcommerce/email/profiles/default'...
Listing './lib/python3.5/site-packages/pcommerce.core-0.4.egg-info'...
Listing './lib/python3.5/site-packages/pcommerce.email-0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
